2006-07-06  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/mozilla/MozDownload.cpp: (OnProgressChange64):

	Don't hammer the cpu when downloading file with an unknown size.
	Fix bug 346671.

2006-07-06  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyFind.cpp:
	* embed/mozilla/EphyFind.h:

	Guess what? Another mozilla API change!

2006-07-06  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/AutoWindowModalState.cpp:
	* embed/mozilla/AutoWindowModalState.h:

	Fix the build.

2006-07-06  Christian Persch  <chpe@cvs.gnome.org>

	A embed/mozilla/AutoWindowModalState.cpp:
	A embed/mozilla/AutoWindowModalState.h:
	* embed/mozilla/ContentHandler.cpp:
	* embed/mozilla/EphyPromptService.cpp:
	* embed/mozilla/FilePicker.cpp:
	* embed/mozilla/FilePicker.h:
	* embed/mozilla/GtkNSSClientAuthDialogs.cpp:
	* embed/mozilla/GtkNSSDialogs.cpp:
	* embed/mozilla/GtkNSSKeyPairDialogs.cpp:
	* embed/mozilla/GtkNSSSecurityWarningDialogs.cpp:
	* embed/mozilla/Makefile.am:

	Prevent DOM window closure while we display a modal dialogue on it.

2006-07-01  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmark-action.c
	(ephy_bookmark_action_sync_smart_url):
	
	Don't cast to gboolean but check for != NULL instead.

2006-06-16  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* src/ephy-session.c: (session_command_autoresume):
	Make the crash recovery dialog appear on the taskbar.
	Fixes bug #345010.

2006-06-16  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-common.js:

	Set the warn-entering-weak security warn pref to true.

2006-06-07  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Don't use AM_GLIB_DEFINE_LOCALEDIR. Bug #343825.

2006-06-05  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* lib/widgets/ephy-location-entry.c: (keyword_match):
	Improve next-token logic for bookmark completion. Fixes
	#339167 (hopefully for real this time).

2006-05-30  Frederic Peters  <fpeters@0d.be>
